fix mobile footer and make upcoming event blocks full width on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -88,6 +88,7 @@ main {
 .menu-overlay {
 	background-color: rgba(91, 44, 144, 1);
 	padding-right: 18%;
+	/*height: 65px;*/
 }
 
 .menu-overlay ul {
@@ -142,7 +143,7 @@ main {
 }
 
 .hamburger-icon {
-	padding: 20% 30% 5% 0; 
+	padding-top: 15px; 
 	float: right;
 }
 
@@ -332,10 +333,12 @@ a {
 
 .mobile-foot {
 	width: 100%;
+	/*height: 50px;*/
 	margin: 0 0 0 0;
-	padding-left: 25%;
+	padding: 2% 0 5% 0;
+	/*padding-left: 25%;*/
 }
-
+/*
 .mobile-foot li {
 	list-style-type: none;
 	font-size: 2em;
@@ -343,6 +346,10 @@ a {
 	font-weight: bold;
 	padding: 2%;
 	background-color: #d2d2d2;
+}*/
+
+.mobile-foot p {
+	text-align: center;
 }
 
 .bx-wrapper {
@@ -670,7 +677,7 @@ a {
 @media all and (min-width: 765px) and (max-width: 1250px) {
 
 	.menu-overlay img {
-		padding-bottom: 10px;
+		/*padding-bottom: 10px;*/
 	}
 
 	.left-block {
@@ -720,8 +727,7 @@ a {
 	}
 
 	.event_block {
-		margin-top:0.5em;
-		margin-bottom:0.5em;
+		margin: 0.5em 0 0.5em 0;
 	}
 
 	.bottom-menu {
